tests/compile-fail/integration__integration__timeline_arg0__reg_as_positional_arg0.snap
---
source: tests/integration/timeline_arg0.rs
expression: stderr
---
error: argument must be a compile-time constant
  ┌─ <input>:7:16
  │
7 │     hasMsgArg0($REG[20], 3, 3);
  │                ^^^^^^^^ not constant
  │
  = because the argument is a word-sized integer


